--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -9,7 +9,7 @@
                     Back
                 </button>
 
-                  <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-10"
+                  <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-10 add-grn-btn"
                   (click)="addGRN()">
                    Add GRN
                 </button>
