--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
           <div class="row ">
             <div class="col-xs-12 p-t-10">
-              <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-30" [disabled]="!form.valid">
+              <button mat-raised-button class="main-background-color main-button color-white pull-right m-r-30 float-rfq-btn" [disabled]="!form.valid">
                 Float RFQ
               </button>
             </div>
