--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -53,7 +53,7 @@
                 (change)="uploadExcel($event.target.files)" />
               <span class="cursor-pointer"> <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer"> Upload Supplier Template</span>
             </div>
-              <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white">
+              <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">
                 Add Supplier
               </button>
           </div>
