--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -157,7 +157,7 @@
             </div>
           </div>
           <div class="col-xs-6 text-right">
-            <button mat-raised-button class="background-white-color main-button main-color"
+            <button mat-raised-button class="background-white-color main-button main-color view-project"
               *ngIf="url==='/project-dashboard'"
               (click)="navigationToBOM(projectDetails.projectId, projectDetails)">View Project</button>
           </div>
