--- a/src/app/shared/layout/header/top-header/top-header.component.html
+++ b/src/app/shared/layout/header/top-header/top-header.component.html
@@ -6,7 +6,7 @@
         <span><img width="200" src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
         <span class="menu-spacer"></span>
 
-        <button class="pull-right p-t-10" mat-button>
+        <button class="pull-right p-t-10 notification-bell-icon" mat-button>
 
             <a href="javascript:void(0)" (click)="openDiv()">
                 <mat-icon [ngClass]="{'bell-icon-active': notifClicked === true,'bell-icon':notifClicked === false }"
