--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -143,7 +143,8 @@
             right: 0px;
             top: 70px;
             width: auto;
-            border-radius: 8px;
+            border-radius: 50px;
+            padding:0px 1px;
         }
         .mat-mini-fab .mat-button-wrapper{
             padding: 8px 15px;
