--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -12,12 +12,12 @@
       </div>
       <div class="col-xs-9 p-t-10 text-right">
         <span class="" *ngIf="this.permissionObj.rfqFlag">
-          <button mat-raised-button class="main-background-color main-button color-white pull-right" [disabled]="!this.checkedSubcategory.length" (click)="createRfq()">
+          <button mat-raised-button class="main-background-color main-button color-white pull-right create-rfq-btn" [disabled]="!this.checkedSubcategory.length" (click)="createRfq()">
             Create RFQ
           </button>
         </span>
         <span class="p-l-5">
-          <button mat-raised-button class="mx-3 main-background-color main-button color-white pull-right" [disabled]="!this.checkedSubcategory.length" (click)="raiseIndent()">
+          <button mat-raised-button class="mx-3 main-background-color main-button color-white pull-right raise-indent-btn" [disabled]="!this.checkedSubcategory.length" (click)="raiseIndent()">
             Raise Indent
           </button>
         </span>
@@ -99,7 +99,7 @@
               <mat-icon>edit</mat-icon>
             </a> -->
 
-            <a *ngIf="permissionObj.rfqFlag" (click)="issueToIndent(element.materialId, projectId)" class="width-15-px p-r-10 cursor-pointer" matTooltip="Issue to Indent">
+            <a *ngIf="permissionObj.rfqFlag" (click)="issueToIndent(element.materialId, projectId)" class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
               <img src="../../../../assets/images/issue_to_indent.png" />
             </a>
             <a
