--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-sm-12 m-t-5 text-right">
         <div *ngIf="this.mode === 'edit'">
-          <button mat-raised-button class="main-background-color main-button color-white" (click)="selectApprover()" [disabled]="!isPoValid">
+          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="selectApprover()" [disabled]="!isPoValid">
             Send For Approval
           </button>
         </div>
