--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -45,7 +45,7 @@
       <div class="col-xs-9">
            <div class="text-right add-user-details-button-right p-t-10 p-r-20">
               <button mat-raised-button (click)="addUser()"
-                class="main-background-color main-button color-white">
+                class="main-background-color main-button color-white add-user-button">
                 Add User
               </button>
           </div>
