End Date and Start Date issue fix, table header color change, Pan Removed from supplier-details Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -92,7 +92,7 @@
           <span class="mat-cell"><span>GST Amount ₹</span> <br />{{ gstTotalAmount | number: "1.2-2" }}</span>
           <span class="mat-cell"><span>Total Amount ₹</span> <br />{{ totalAmount | number: "1.2-2" }}</span>
         </div>
-        <div class="col-xs-12 text-right text-semi-bold m-t-10">Net Payable Amount in Words : {{ totalAmount | numberToWords | async }}</div>
+        <div class="col-xs-12 text-right text-semi-bold m-t-10 p-r-35">Net Payable Amount in Words : {{ totalAmount | numberToWords | async }}</div>
       </mat-accordion>
     </form>
   </div>
