--- a/src/assets/scss/pages/bom.scss
+++ b/src/assets/scss/pages/bom.scss
@@ -10,6 +10,7 @@
 }
 .bom-material-table{
     tr.mat-header-row{
+        background: #2197bb;
         height: 45px;
         th{
             font-weight: 500;
