--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -389,7 +389,8 @@ div.limited-character {
 
 
 .blue-background-color-color-white-section {
-    background: #192135;
+   // background: #192135;
+    background: #2197bb;
     border-radius: 0px;
 
     span.mat-header-cell {
