--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -98,12 +98,12 @@
             </ng-container>
 
             <!-- Symbol Column -->
-            <ng-container matColumnDef="pan">
+            <!-- <ng-container matColumnDef="pan">
               <th mat-header-cell *matHeaderCellDef>PAN</th>
               <td mat-cell *matCellDef="let element">
                 {{ element.pan }}
               </td>
-            </ng-container>
+            </ng-container> -->
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="status">
