--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -66,21 +66,21 @@
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="addressLine1" formControlName="addressLine1" required />
+                  <input matInput type="text" placeholder="Address Line1" formControlName="addressLine1" required />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine1 is Required</mat-error> -->
                   <small
                     *ngIf="form.controls['addressLine1'].hasError('required') && form.controls['addressLine1'].touched"
-                    class="form-error-msg"> AddressLine1 is required </small>
+                    class="form-error-msg"> Address Line1 is required </small>
                   <small
                     *ngIf="form.controls['addressLine1'].hasError('pattern') && form.controls['addressLine1'].touched"
-                    class="form-error-msg"> Enter Valid AddressLine1</small>
+                    class="form-error-msg"> Enter Valid Address Line1</small>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-6">
                 <!-- PinCode -->
                 <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="addressLine2" formControlName="addressLine2" />
+                  <input matInput type="text" placeholder="Address Line2" formControlName="addressLine2" />
                   <!-- <mat-error class="mat-error-add-edit-form-modal">addressLine2 is Required</mat-error> -->
                   <!-- <small
                     *ngIf="form.controls['addressLine2'].hasError('required') && form.controls['addressLine2'].touched"
