--- a/src/assets/scss/pages/rfq-bids.component.scss
+++ b/src/assets/scss/pages/rfq-bids.component.scss
@@ -103,6 +103,12 @@
   .mat-row .mat-cell {
     min-width: 80px;
   }
+  tr.mat-header-row{
+    height: 45px;
+  }
+  .mat-expansion-panel-header{
+    min-height: 48px;
+  }
 }
 .customBid .mat-expansion-panel-header.rfqbid-header-color {
   background-color: (169, 174, 188, 0.21) !important;
@@ -117,4 +123,12 @@
 
 .rfqbid-header-color {
   background-color: (169, 174, 188, 0.21) !important;
+}
+
+.mat-horizontal-stepper-content{
+  .select-project{
+    .mat-form-field-wrapper{
+      padding-top: 0px !important;
+    }
+  }
 }
