--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -11,7 +11,7 @@
           </button>
         </div>
         <div *ngIf="this.mode === 'requiredApproval'">
-          <button mat-raised-button class="main-background-color main-button color-white m-r-5" (click)="poApproval('rejected')">
+          <button mat-raised-button class="background-color-white main-button main-color m-r-5" (click)="poApproval('rejected')">
             Rejected
           </button>
           <button mat-raised-button class="main-background-color main-button color-white " (click)="poApproval('approved')">
