--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -1,6 +1,23 @@
 <form *ngIf="projectSelectedMaterials.length" [formGroup]="materialForms">
   <div class="row ">
-    <div class="col-xs-12 text-right p-b-10">
+    <div class="col-xs-6 p-t-10 border-input">
+     
+        <mat-form-field class=" input-search-padding-zero">
+          <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
+          <button mat-button matSuffix mat-icon-button>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+    
+      <mat-form-field class=" p-l-20 input-search-padding-zero">
+        <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
+        <button mat-button matSuffix mat-icon-button>
+          <mat-icon>search</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+
+    <div class="col-xs-6 text-right p-t-10">
       <span class="p-r-5">
         <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="materialAdded()" type="button">Back</button>
       </span>
@@ -12,7 +29,7 @@
     </div>
   </div>
   <div class="row ">
-    <div class="col-xs-12 text-right p-t-10 border-input">
+    <!-- <div class="col-xs-12 text-right p-t-10 border-input">
       <span class="p-r-20">
         <mat-form-field class="input-search-padding-zero">
           <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
@@ -27,7 +44,7 @@
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
-    </div>
+    </div> -->
   </div>
   <div *ngFor="let material of projectSelectedMaterials | SearchPipe: searchProject:'projectName'; let mati = index">
     <mat-accordion class="accordion-padding-zero" formArrayName="forms">
