--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -100,7 +100,7 @@
           <ng-container matColumnDef="Role">
             <th mat-header-cell *matHeaderCellDef>Role</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.ProjectUser.roleName }}
+              {{ element.ProjectUser.roleDescription }}
             </td>
           </ng-container>
 
@@ -185,7 +185,7 @@
           <ng-container matColumnDef="Role">
             <th mat-header-cell *matHeaderCellDef>Role</th>
             <td mat-cell *matCellDef="let element">
-              {{ element.ProjectUser.roleName }}
+              {{ element.ProjectUser.roleDescription }}
             </td>
           </ng-container>
 
