--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -482,4 +482,9 @@ mat-accordion {
   .float-right{
     float: right;
   }
-  
+  .color-main{
+    color: #f4772a;
+  }
+  .font-bold{
+    font-weight: 500;
+  }
