--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -12,7 +12,7 @@
         </div>
         <div *ngIf="this.mode === 'requiredApproval'">
           <button mat-raised-button class="background-color-white main-button main-color m-r-5" (click)="poApproval('rejected')">
-            Rejected
+            Reject
           </button>
           <button mat-raised-button class="main-background-color main-button color-white " (click)="poApproval('approved')">
             Approve
